--- a/project3/index.html
+++ b/project3/index.html
@@ -61,7 +61,7 @@
         <div class ="box">
         <div class="content">
           <div class="cell3">
-              <a href="https://mmk3054.github.io/igme230/">
+              <a href="https://mmk3054.github.io/igme230/project3/sleep/sleep.html">
               <div class="image3">
                   <img alt="photo2" src="photo2.png">
               </div>   
@@ -80,7 +80,7 @@
         </div>
         <div class="content">
           <div class="cell5">
-              <a href="https://mmk3054.github.io/igme230/">
+              <a href="https://mmk3054.github.io/igme230/project3/iMessage/message.html">
             <div class="image5">
                 <img alt="photo5" src="iMessage.png"> 
             </div>
@@ -89,7 +89,7 @@
         </div>
         <div class="content">
         <div class="cell6">
-          <a href="https://mmk3054.github.io/igme230/">
+          <a href="https://mmk3054.github.io/igme230/project3/dmv/dmv.html">
           <div class="image6">
               <img alt="photo6" src="dmv.png"> 
           </div>
