--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <h3> Projects</h3>
         <a href="https://mmk3054.github.io/igme230/">Project 1</a>
         <a href="projects/project2/projects2.html">Project 2</a>
-        <a href="projects/project3/index.html">Project 3</a>
+        <a href="https://mmk3054.github.io/igme230/Project 3/index.html">Project 3: Revised Portfoli</a>
    
     </div>
 
