--- a/Project 3/notes/notes.html
+++ b/Project 3/notes/notes.html
@@ -19,7 +19,21 @@
         </nav>
 
         <article>
-            <h2 id="content">Project notes</h2>
+            <h1 id="content">Documentation Page</h1>
+            <h2>Goals/Auience</h2>
+            <p></p>
+            <h2>Design Decisions</h2>
+            <p></p>
+            <h2>Wireframes</h2>
+            <h2>Sources</h2>
+            <p></p>
+            <h2>What changed?</h2>
+            <p>From my first portfolio site a lot has changd. I now use gride layouts in every single page. I use grides inside of grides, for example my titlebar was not centering
+                my name so I made a 3 column grid in there and set the two asides to the same length and the middle content to auto. Then i justified the content and aligned items to center to keep my name centered. 
+                I also changed my layout and design to reflect a unique style. My layout is no longer cookie cutter, it has unique attributes like the overflow scroll on the main page work. I also included video of my projects within the site as well.
+            </p>
+
+
             <p></p>
             </article>
 
