--- a/Project 3/notes/notes.html
+++ b/Project 3/notes/notes.html
@@ -30,7 +30,9 @@
             <h2>What changed?</h2>
             <p>From my first portfolio site a lot has changd. I now use gride layouts in every single page. I use grides inside of grides, for example my titlebar was not centering
                 my name so I made a 3 column grid in there and set the two asides to the same length and the middle content to auto. Then i justified the content and aligned items to center to keep my name centered. 
-                I also changed my layout and design to reflect a unique style. My layout is no longer cookie cutter, it has unique attributes like the overflow scroll on the main page work. I also included video of my projects within the site as well.
+                I also changed my layout and design to reflect a unique style. My layout is no longer cookie cutter, it has unique attributes like the overflow scroll on the main page work. I also included video of my projects within the site as well. 
+                As for this site, I learned a lot more about grid and diffrent layouts, I did not do that before hand. 
+                I contnuioislly worked on this project for weeks and was able to fix errors I did not see before. I feel over all I have learned  lot from this specific project.
             </p>
 
 
