--- a/Project 3/notes/notes.html
+++ b/Project 3/notes/notes.html
@@ -20,10 +20,14 @@
 
         <article>
             <h1 id="content">Documentation Page</h1>
-            <h2>Goals/Auience</h2>
-            <p></p>
+            <h2>Goals</h2>
+            <p>To effectively communicate my design and skills to the person viewing my site. The should be able to get a sense of the type of designer i am. This is clean and classic with warm colors that include gradients. I like clean fonts, I tend to san serif fonts so the words are legible, clean and demonstrate a crisp look. Overall the goal is to display good design skills and for the user to easily be able to navigate through my site.</p>
+            <h2>Audience</h2>
+            <p>The intended audience is potential employers and professors. I would like to gear my site to fit those major categories because they provide the most opportunity for growth within the design community. If I make my website enjoyable for both parties I can find more opportunities and jobs which is the ultimate goal.</p>
             <h2>Design Decisions</h2>
-            <p></p>
+            <p>I decided to use a pink gradient design scheme because this best reflects who I am as a designer. My grid choice was picked to reflect a unique style that you normally do not see from most design or portfolio websites
+                The side bar stays fixed as well as the titlebar so that the user can constantly navigate through the site.
+            </p>
             <h2>Wireframes</h2>
             <h2>Sources</h2>
             <p></p>
