--- a/Project 3/notes/notes.html
+++ b/Project 3/notes/notes.html
@@ -30,7 +30,7 @@
             </p>
             <h2>Wireframes</h2>
             <h2>Sources</h2>
-            <p></p>
+            <p>For my sources I started by using grid layouts from our exercise in class. I then modified the grid so it reflected my layout. I also used code pen for the hover jQuery in the first loading page. I used W3 schools for the looping animation as well. I used our first templete for the practice final for my notes page.</p>
             <h2>What changed?</h2>
             <p>From my first portfolio site a lot has changd. I now use gride layouts in every single page. I use grides inside of grides, for example my titlebar was not centering
                 my name so I made a 3 column grid in there and set the two asides to the same length and the middle content to auto. Then i justified the content and aligned items to center to keep my name centered. 
