--- a/Project 3/notes/notes.html
+++ b/Project 3/notes/notes.html
@@ -29,6 +29,7 @@
                 The side bar stays fixed as well as the titlebar so that the user can constantly navigate through the site.
             </p>
             <h2>Wireframes</h2>
+            <img alt="wireframe" src="wire.png">
             <h2>Sources</h2>
             <p>For my sources I started by using grid layouts from our exercise in class. I then modified the grid so it reflected my layout. I also used code pen for the hover jQuery in the first loading page. I used W3 schools for the looping animation as well. I used our first templete for the practice final for my notes page.</p>
             <h2>What changed?</h2>
