changed folder name

--- a/Project 3/index.html
+++ b/Project 3/index.html
@@ -27,18 +27,18 @@
             <div class="space"></div>
             <div class="work">
               <img alt="icon1" src="work.png">
-            <a href="https://mmk3054.github.io/igme230/project3/index.html">Work</a>
+            <a href="https://mmk3054.github.io/igme230/Project 3/index.html">Work</a>
           </div>
           <div class="resume">
             <img alt="icon2" src="resume.png">
-            <a href="https://mmk3054.github.io/igme230/project3/resume/resume.html">Resume</a>
+            <a href="https://mmk3054.github.io/igme230/Project 3/resume/resume.html">Resume</a>
           </div>
           <div class="notes">
             <img alt="icon3" src="notes.png">
-            <a href="https://mmk3054.github.io/igme230/project3/notes/notes.html">Notes</a>
+            <a href="https://mmk3054.github.io/igme230/Project 3/notes/notes.html">Notes</a>
           </div>
           <div class="contact">
-            <img alt="https://mmk3054.github.io/igme230/project3/contact/contact.html" src="profile.png">
+            <img alt="https://mmk3054.github.io/igme230/Project 3/contact/contact.html" src="profile.png">
             <a href="#">Contact</a>
           </div>
           </div>
@@ -61,7 +61,7 @@
         <div class ="box">
         <div class="content">
           <div class="cell3">
-              <a href="https://mmk3054.github.io/igme230/project3/sleep/sleep.html">
+              <a href="https://mmk3054.github.io/igme230/Project 3/sleep/sleep.html">
               <div class="image3">
                   <img alt="photo2" src="photo2.png">
               </div>   
@@ -71,7 +71,7 @@
 
         <div class="content">
           <div class="cell4">
-              <a href="https://mmk3054.github.io/igme230/project3/mandala/mandala.html">
+              <a href="https://mmk3054.github.io/igme230/Project 3/mandala/mandala.html">
             <div class="image4">
                 <img alt="photo4" src="mandala.png">
             </div>
@@ -80,7 +80,7 @@
         </div>
         <div class="content">
           <div class="cell5">
-              <a href="https://mmk3054.github.io/igme230/project3/iMessage/message.html">
+              <a href="https://mmk3054.github.io/igme230/Project 3/iMessage/message.html">
             <div class="image5">
                 <img alt="photo5" src="iMessage.png"> 
             </div>
@@ -89,7 +89,7 @@
         </div>
         <div class="content">
         <div class="cell6">
-          <a href="https://mmk3054.github.io/igme230/project3/dmv/dmv.html">
+          <a href="https://mmk3054.github.io/igme230/Project 3/dmv/dmv.html">
           <div class="image6">
               <img alt="photo6" src="dmv.png"> 
           </div>
