--- a/Project 3/sleep/sleep.html
+++ b/Project 3/sleep/sleep.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="sleep.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
-    <title>Mandala</title>
+    <title>Healthy Day</title>
 </head>
 <body>
       <div class="container">
@@ -66,14 +66,18 @@
                 </div>
                 <div class = "words">
                 <h1>Mandala</h1> 
-                <p >Animation Project | Spring 2018 | 4 weeks</p> 
+                <p >Graphical User Interface Project | Fall 2018 | 13 weeks</p> 
 
                 <h2>Project Overview</h2>
-                <p>Students were asked to create and animate a personal mandala. The Mandala should represent you in someway by the use of shape, image, color and style of animation. My goal was to include principles of design and principles of animation into a retro tech mandala.</p>
-                <h2>Sketches</h2>
+                <p>Students were to create an daily task manager app. It had to reflect the past present and future. It had to solve a goal of orginization. Healthy Day is a way to manage sleep, stress, mood and exercise. </p>
+                <h2>Mock ups</h2>
                        <div class="grid-container">
-                            <div class="grid-item"><img alt="skecth1" src="sketch1.png"></div>
-                            <div class="grid-item"><img alt="skecth1" src="sketch2.png"></div>
+                            <div class="grid-item"><img alt="skecth1" src="home.png"></div>
+                            <div class="grid-item"><img alt="skecth1" src="log.png"></div>
+                            <div class="grid-item"><img alt="skecth1" src="ex.png"></div>
+                            <div class="grid-item"><img alt="skecth1" src="sleep.png"></div>
+                            <div class="grid-item"><img alt="skecth1" src="mood.png"></div>
+                            <div class="grid-item"><img alt="skecth1" src="Stress.png"></div>
                             </div>
             </div>
               </div>
